Stop dumping debug output, re-try startng the node once

--- a/roles/openshift_node/tasks/main.yml
+++ b/roles/openshift_node/tasks/main.yml
@@ -118,14 +118,10 @@
   service: name={{ openshift.common.service_type }}-node enabled=yes state=started
   register: node_start_result
   ignore_errors: yes
-
-- name: Check logs on failure
-  command: journalctl -xe
-  register: node_failure
-  when: node_start_result | failed
-
-- name: Dump failure information
-  debug: var=node_failure
+  
+- name: Start and enable node again
+  service: name={{ openshift.common.service_type }}-node enabled=yes state=started
+  register: node_start_result
   when: node_start_result | failed
 
 - set_fact:
