--- a/playbooks/common/openshift-cluster/upgrades/v3_1_to_v3_2/upgrade.yml
+++ b/playbooks/common/openshift-cluster/upgrades/v3_1_to_v3_2/upgrade.yml
@@ -13,29 +13,8 @@
   - name: Set post docker install facts
     openshift_facts:
       role: "{{ item.role }}"
-      local_facts: "{{ item.local_facts }}"
     with_items:
     - role: docker
-      local_facts:
-        openshift_image_tag: "v{{ g_new_version }}"
-        openshift_version: "{{ g_new_version }}"
-
-# The cli image is used by openshift_docker_facts to determine the currently installed
-# version.  We need to explicitly pull the latest image to handle cases where
-# the locally cached 'latest' tag is older the g_new_version.
-- name: Download cli image
-  hosts: oo_masters_to_config:oo_nodes_to_config
-  roles:
-  - { role: openshift_docker_facts }
-  vars:
-    openshift_docker_hosted_registry_network: "{{ hostvars[groups.oo_first_master.0].openshift.common.portal_net }}"
-  tasks:
-  - name: Pull Images
-    command: >
-      docker pull {{ item }}:latest
-    with_items:
-    - "{{ openshift.common.cli_image }}"
-    when: openshift.common.is_containerized | bool
 
 ###############################################################################
 # Upgrade Masters
@@ -53,7 +32,7 @@
   - include_vars: ../../../../../roles/openshift_master/vars/main.yml
 
   - name: Update systemd units
-    include: ../../../../../roles/openshift_master/tasks/systemd_units.yml openshift_version=v{{ g_new_version }}
+    include: ../../../../../roles/openshift_master/tasks/systemd_units.yml
 
 #  - name: Upgrade master configuration
 #    openshift_upgrade_config:
@@ -127,9 +106,9 @@
 - name: Reconcile Cluster Roles and Cluster Role Bindings and Security Context Constraints
   hosts: oo_masters_to_config
   roles:
-  - { role: openshift_cli, openshift_image_tag: "v{{ g_new_version }}" }
+  - { role: openshift_cli }
   vars:
-    origin_reconcile_bindings: "{{ deployment_type == 'origin' and g_new_version | version_compare('1.0.6', '>') }}"
+    origin_reconcile_bindings: "{{ deployment_type == 'origin' and openshift_version | version_compare('1.0.6', '>') }}"
     ent_reconcile_bindings: true
     openshift_docker_hosted_registry_network: "{{ hostvars[groups.oo_first_master.0].openshift.common.portal_net }}"
   tasks:
