Fix docker restarts during openshift_version role.
The variable here must be explicitly passed to the docker role, if it's
passed sometimes and not others, the docker config changes triggers a
docker restart effectively killing everything on the node in an unsafe
manner.

Instead lets make sure the value is set.

--- a/roles/openshift_docker_facts/tasks/main.yml
+++ b/roles/openshift_docker_facts/tasks/main.yml
@@ -34,7 +34,8 @@
 - set_fact:
     docker_options: "--insecure-registry={{ openshift.docker.hosted_registry_network }} {{ openshift.docker.options | default ('') }}"
   when: openshift.docker.hosted_registry_insecure | default(False) | bool and openshift.docker.hosted_registry_network is defined
+  register: hosted_registry_options
 
 - set_fact:
     docker_options: "{{ openshift.docker.options | default(omit) }}"
-  when: not openshift.docker.hosted_registry_insecure | default(False) | bool
+  when: hosted_registry_options | skipped
