--- a/playbooks/adhoc/uninstall.yml
+++ b/playbooks/adhoc/uninstall.yml
@@ -143,11 +143,13 @@
     - registry\.qe\.openshift\.com/.*
     - registry\.access\..*redhat\.com/rhel7/etcd
     - docker.io/openshift
+    when: openshift_uninstall_images | default(True) | bool
 
   - shell:  "docker rmi -f {{ item.stdout_lines | join(' ') }}"
     changed_when: False
     failed_when: False
     with_items: "{{ images_to_delete.results }}"
+    when: openshift_uninstall_images | default(True) | bool
 
   - name: Remove sdn drop files
     file:
