--- a/roles/openshift_node_dnsmasq/tasks/main.yml
+++ b/roles/openshift_node_dnsmasq/tasks/main.yml
@@ -3,15 +3,16 @@
   command: >
     systemctl show NetworkManager
   register: nm_show
-  
+  changed_when: false
+
 - name: Set fact using_network_manager
   set_fact:
     network_manager_active: "{{ True if 'ActiveState=active' in nm_show.stdout else False }}"
-    
+
 - name: Install dnsmasq
   action: "{{ ansible_pkg_mgr }} name=dnsmasq state=installed"
   when: not openshift.common.is_atomic | bool
-  
+
 - name: Install dnsmasq configuration
   template:
     src: origin-dns.conf.j2
@@ -20,8 +21,7 @@
 # Dynamic NetworkManager based dispatcher
 - include: ./network-manager.yml
   when: network_manager_active | bool
-  
+
 # Relies on ansible in order to configure static config
 - include: ./no-network-manager.yml
   when: not network_manager_active | bool
-  
