--- a/roles/openshift_examples/tasks/main.yml
+++ b/roles/openshift_examples/tasks/main.yml
@@ -7,7 +7,7 @@
 - name: Modify registry paths if registry_url is not registry.access.redhat.com
   shell: >
     find {{ examples_base }} -type f | xargs -n 1 sed -i 's|registry.access.redhat.com|{{ registry_host | quote }}|g'
-  when: registry_host != ''
+  when: registry_host != '' and openshift_examples_modify_imagestreams | default(False) | bool
 
 # RHEL and Centos image streams are mutually exclusive
 - name: Import RHEL streams
