Fix typo in example inventories.

--- a/inventory/byo/hosts.aep.example
+++ b/inventory/byo/hosts.aep.example
@@ -39,7 +39,7 @@ openshift_release=v3.2
 # Specify an exact rpm version to install or configure.
 # WARNING: This value will be used for all hosts in RPM based environments, even those that have another version installed.
 # This could potentially trigger an upgrade and downtime, so be careful with modifying this value after the cluster is set up.
-#openshift_image_tag=-3.2.0.46
+#openshift_pkg_version=-3.2.0.46
 
 # Install the openshift examples
 #openshift_install_examples=true
